--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
   <body>
   	<canvas></canvas>
-    <section class="stats">
+  <!--  <section class="stats">
       <h2>Homes</h2>
       <ul id="homes">
       </ul>
       <h2>Landfills</h2>
       <ul id="landfills">
       </ul>
-    </section>
-    <input type="text" placeholder="np. Zabierz śmieci z domku #1, Zostaw inne w (2, 12), Jedź do #4 i zabierz plastik">
-    <div class="logs">
+    </section>-->
+    <!-- <input type="text" placeholder="np. Zabierz śmieci z domku #1, Zostaw inne w (2, 12), Jedź do #4 i zabierz plastik">
+    <div class="logs">-->
     </div>
     <script type="text/javascript" src="js/model.js"></script>
   </body>
