--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- <input type="text" placeholder="np. Zabierz śmieci z domku #1, Zostaw inne w (2, 12), Jedź do #4 i zabierz plastik">
     <div class="logs">-->
     </div>
+    <script type="text/javascript" src="js/Astar.js"></script>
     <script type="text/javascript" src="js/model.js"></script>
   </body>
 </html>
