--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-  	<canvas></canvas>
-  <!--  <section class="stats">
+  	<canvas width="480" height="480"></canvas>
+   <!-- <section class="stats">
       <h2>Homes</h2>
       <ul id="homes">
       </ul>
@@ -16,10 +16,11 @@
       <ul id="landfills">
       </ul>
     </section>-->
-    <!-- <input type="text" placeholder="np. Zabierz śmieci z domku #1, Zostaw inne w (2, 12), Jedź do #4 i zabierz plastik">
-    <div class="logs">-->
-    </div>
+    <!-- <input type="text" placeholder="np. Zabierz śmieci z domku #1, Zostaw inne w (2, 12), Jedź do #4 i zabierz plastik"> -->
+    <!-- <div class="logs">
+    </div> -->
     <script type="text/javascript" src="js/Astar.js"></script>
-    <script type="text/javascript" src="js/model.js"></script>
+    <script type="text/javascript" src="js/world.js"></script>
+    <!-- <script type="text/javascript" src="js/model.js"></script> -->
   </body>
 </html>
