--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- <div class="logs">
     </div> -->
     <script type="text/javascript" src="js/Astar.js"></script>
+    <script type="text/javascript" src="js/TSP.js"></script>
     <script type="text/javascript" src="js/world.js"></script>
     <!-- <script type="text/javascript" src="js/model.js"></script> -->
   </body>
