--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="js/Astar.js"></script>
     <script type="text/javascript" src="js/TSP.js"></script>
     <script type="text/javascript" src="js/world.js"></script>
+    <script type="text/javascript" src="js/test.js"></script>
     <!-- <script type="text/javascript" src="js/model.js"></script> -->
   </body>
 </html>
