added decisive tree algoritm, updated the destination's list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   	<canvas width="768" height="768"></canvas>
+    <script src="http://joonku.com/js/machine_learning.min.js"></script>
     <script type="text/javascript" src="js/Astar.js"></script>
     <script type="text/javascript" src="js/TSP.js"></script>
     <script type="text/javascript" src="js/world.js"></script>
